--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="jumbotron">
       <h1>Sweet Munchies Catering Co.</h1>
       <h2>Hungry for food look no further!</h2>
@@ -67,6 +67,22 @@
       </div>
       <div class="panel-footer">
         <p>The following meals are accompanied by a starch of your choice, Either Rice, Ugali, Mukimo or fried potatoes, and greens of your choice (kales, spinanch or cabbage)</p>
+      </div>
+    </div>
+    <!-- Customer Testimonials -->
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+        <h2 class="panel-title">Customer Testimonials</h2>
+      </div>
+      <div class="panel-body">
+        <blockquote>
+          <p>"The food is tasty. I will definitely eat again"</p>
+          <footer>Sarah Marion |<cite title="Eating"> Food Lover</cite></footer>
+        </blockquote>
+        <blockquote>
+          <p>"I got really full."</p>
+          <footer>Richard Waweru | <cite>Always hungry</cite></footer>
+        </blockquote>
       </div>
     </div>
 
