--- a/index.html
+++ b/index.html
@@ -10,63 +10,105 @@
 
 <body>
   <div class="container-fluid">
-    <div class="jumbotron">
-      <h1>Sweet Munchies Catering Co.</h1>
-      <h2>Hungry for food look no further!</h2>
+    <div class="row">
+      <div class="jumbotron">
+        <h1>Sweet Munchies Catering Co.</h1>
+        <h2>Hungry for food look no further!</h2></br></br></br><br>
+      </div>
     </div>
+  </div>
+
+  <div class="container">
     <div class="well">
       <h2>Featured Meals</h2>
-      <p>Lorem ipsum</p>
-      <img src="Images/burger.jpg" alt="Chicken pic">
-      <p>Lorem ipsum</p>
-      <img src="Images/burger.jpg" alt="Lamb Chops Pic">
-      <p>Lorem ipsum</p>
-      <img src="Images/burger.jpg" alt="Burger">
-      <p>Lorem ipsum</p>
-      <img src="Images/burger.jpg" alt="Ribs">
-      <p>Lorem ipsum</p>
-      <img src="Images/burger.jpg" alt="Steak pic">
+      <div class="row">
+        <div class="col-md-6">
+          <p>Lorem ipsum</p>
+        </div>
+        <div class="col-md-6">
+          <img src="Images/burger.jpg" alt="Chicken pic">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="Images/burger.jpg" alt="Lamb Chops Pic">
+        </div>
+        <div class="col-md-6">
+          <p>Lorem ipsum</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <p>Lorem ipsum</p>
+        </div>
+        <div class="col-md-6">
+          <img src="Images/burger.jpg" alt="Burger">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="Images/burger.jpg" alt="Ribs">
+        </div>
+        <div class="col-md-6">
+          <p>Lorem ipsum</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <p>Lorem ipsum</p>
+        </div>
+        <div class="col-md-6">
+          <img src="Images/burger.jpg" alt="Steak pic">
+        </div>
+      </div>
     </div>
 
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h2 class="panel-title">Meals</h2>
+    <div class="row">
+
+      <div class="col-md-6">
+        <div class="panel panel-danger">
+          <div class="panel-heading">
+            <h2 class="panel-title">Meals</h2>
+          </div>
+          <div class="panel-body">
+            <ul>
+              <li> Chips</li>
+              <li> Chips Masala</li>
+              <li> Pilau</li>
+              <li> Squid</li>
+              <li> Samosa</li>
+              <li> Sausages</li>
+              <li> Prawns</li>
+              <li> Fish</li>
+              <li> Rolls</li>
+              <li> Pizza</li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="panel-body">
-        <ul>
-          <li> Chips</li>
-          <li> Chips Masala</li>
-          <li> Pilau</li>
-          <li> Squid</li>
-          <li> Samosa</li>
-          <li> Sausages</li>
-          <li> Prawns</li>
-          <li> Fish</li>
-          <li> Rolls</li>
-          <li> Pizza</li>
-        </ul>
-      </div>
-    </div>
-    <div class="panel panel-danger">
-      <div class="panel-heading">
-        <h2 class="panel-title">Food Combinations</h2>
-      </div>
-      <div class="panel-body">
-        <ul>
-          <li class="bg-info"> Matumbo</li>
-          <li> Githeri</li>
-          <li> Ndengu</li>
-          <li> Beans</li>
-          <li class="bg-info"> Pork</li>
-          <li class="bg-info"> Beef</li>
-          <li> Njahi</li>
-          <li> Peas</li>
-          <li> Mix</li>
-          <li class="bg-info"> Omena</li>
-        </ul>
-      </div>
-      <div class="panel-footer">
-        <p>The following meals are accompanied by a starch of your choice, Either Rice, Ugali, Mukimo or fried potatoes, and greens of your choice (kales, spinanch or cabbage)</p>
+      <div class="col-md-6">
+        <div class="panel panel-danger">
+          <div class="panel-heading">
+            <h2 class="panel-title">Food Combinations</h2>
+          </div>
+          <div class="panel-body">
+            <ul>
+              <li class="bg-info"> Matumbo</li>
+              <li> Githeri</li>
+              <li> Ndengu</li>
+              <li> Beans</li>
+              <li class="bg-info"> Pork</li>
+              <li class="bg-info"> Beef</li>
+              <li> Njahi</li>
+              <li> Peas</li>
+              <li> Mix</li>
+              <li class="bg-info"> Omena</li>
+            </ul>
+          </div>
+          <div class="panel-footer">
+            <p>The following meals are accompanied by a starch of your choice, Either Rice, Ugali, Mukimo or fried potatoes, and greens of your choice (kales, spinanch or cabbage)</p>
+          </div>
+        </div>
       </div>
     </div>
     <!-- Customer Testimonials -->
@@ -84,6 +126,19 @@
           <footer>Richard Waweru | <cite>Always hungry</cite></footer>
         </blockquote>
       </div>
+    </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="modal-footer">
+        <div class="container">
+          <p>Sarah</p><br>
+          <p>Marion</p><br>
+          <p>Ndeti</p><br>
+        </div>
+      </div>
+
     </div>
 
   </div>
